# Api_vcf

./: .coverage  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
api/: urls.py
api/application/: api_service.py
api/application/domain/entity/: vcf_entity.py
api/application/domain/serializers/: response_serializer.py
api/infrastructure/: admin.py  models.py  views.py
api/infrastructure/management/commands/: loaddatavcf.py
api/migrations/: 0001_initial.py  0002_data_filter_data_format_data_info_data_nas_data_qual_and_more.py  0003_alter_data_id.py  0004_alter_data_alt_alter_data_chrom_alter_data_filter_and_more.py  0005_data_id_data_alter_data_id_alter_data_qual.py  0006_alter_data_alt_alter_data_chrom_alter_data_filter_and_more.py
apilibrary/app/: asgi.py  settings.py  wsgi.py
app/: asgi.py  settings.py  urls.py  wsgi.py
db/: populate_db.py  vcf_reader.py
tests/: api_service_tests.py  api_view_tests.py
tests/application/: test_api_service.py
tests/infrastructure/: test_api_view.py
